Fix the button alignment

--- a/core-bundle/contao/themes/flexible/basic.css
+++ b/core-bundle/contao/themes/flexible/basic.css
@@ -842,8 +842,6 @@ a.tl_submit {
 	padding: 0;
 	border: 0;
 	background: none;
-	position: relative;
-	top: -2px;
 	vertical-align: middle;
 }
 
